ChangeLog for KNotes
====================

2005/12/30  Michael Brade <brade@kde.org>

    * more correct enabling of edit actions when (un)locking a note

2005/09/06  Michael Brade <brade@kde.org>

    * make note colors in Kicker work again for new notes and on start-up.

2005/09/06  Michael Brade <brade@kde.org>

    * fixed #106724: don't overwrite files without asking for confirmation
      first

2005/08/17  Alejandro Exojo <suy@badopi.org>

    * Allow the selection of the file where the file resource should store the
      notes. If no file is found in the config, fall back to the standard one.

2005/05/30  Michael Brade <brade@kde.org>

    * wish #99853: give KNotes a new and fancy style, configurable in the
      global settings. Thanks to Bera Debajyoti for the initial patch and
      the idea!

2005/04/13  Michael Brade <brade@kde.org>

    * fixed #103777: save note as plain text actually saved it as richt text
      and vice versa

2005/04/11  Michael Brade <brade@kde.org>

    * fixed #101875: also save the note's position when hiding it
    * fixed #102546: don't write the global config file every 60 seconds,
      do it only when the notes are saved as well

2005/02/21  Michael Brade <brade@kde.org>

    * fixed #93001: strikeout text now actually works for multiple paragraphs
      as well.
    * fixed #18059: finished implementation of alarms for the notes

2005/02/05  Michael Brade <brade@kde.org>

    * fixed crash when deleting a note
    * KNotes startup much faster

2005/02/02  Michael Brade <brade@kde.org>

    * implemented #69137: read-only support for the notes, i.e. the ability to
      lock a note from being modified.

2005/01/16  Michael Brade <brade@kde.org>

    * read the most recent instead of always taking the local knotesui.rc file
    * started implementing alarms for the notes

2005/01/09  Michael Brade <brade@kde.org>

    * fixed #76435: most wanted feature: find function for the notes.