@@ -1,6 +1,11 @@
 ChangeLog for KNotes
 ====================
 
+2006/01/04  Michael Brade <brade@kde.org>
+
+    * never show the text of the tool buttons
+    * don't accept color drops on a locked note
+
 2005/12/30  Michael Brade <brade@kde.org>
 
     * more correct enabling of edit actions when (un)locking a note
